# SweepyWay

./: .gitignore  .gitmodules  LICENSE  README.md  analyze_pcb_glb_structure.py  build.sh  create_full_3d_visual.py  create_full_3d_visual_v10_pygltflib.py  create_full_3d_visual_v11_hybrid.py  create_full_3d_visual_v1_baseline.py  create_full_3d_visual_v2_graph_transforms.py  create_full_3d_visual_v3_scene_merge.py  create_full_3d_visual_v4_graph_edges.py  create_full_3d_visual_v5_reexport.py  create_full_3d_visual_v6_scene_transform.py  create_full_3d_visual_v7_preserve_structure.py  create_full_3d_visual_v8_copy_graph.py  create_full_3d_visual_v9_scene_add.py  estado_de_situacion.txt  fix_glb_scale.py  inspect_merged_glb.py  package-lock.json  pensando sobre el tenting kit.txt  pyproject.toml  rebuild.sh  run_kibot.bat  run_kibot_boards.bat
research case 2025-08-03/pymodeling_tests/: IMP_POR_QUE_FALLA_LOS_ULTIMOS_ATTEMPTS.txt  IMP_trimesh_star.py  IMP_trimesh_starbased_poly.py  IMP_trimesh_starbased_poly_sloped_correct_axis.py  IMP_trimesh_test18.py  chatgpttest copy 2.py  chatgpttest copy.py  chatgpttest.py  hand_rest_extruded.stl  hello.py  inspect_an_element_cadquery.py  l_hand_rest_lofted.stl  l_hand_rest_lofted_solid.stl  l_hand_rest_polygon.dxf  l_hand_rest_solid_loft.stl  load_hand_rest copy.py  load_hand_rest.py  lofted_polyhedron.stl  lofted_polyhedron_clean.stl  lofted_polyhedron_final.stl  lofted_polyhedron_from_dxf.stl  lofted_polyhedron_opta2.stl  lofted_polyhedron_optb.stl  lofted_polyhedron_optbv3.stl  lofted_polyhedron_refactored.stl  pyproject.toml  (+39 more)
(+265 files in other folders)
