[project]
name = "pymodeling-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.5.2",
    "ezdxf>=1.4.2",
    "ipykernel>=6.30.0",
    "mapbox-earcut>=1.0.3",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyglet<2",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "trimesh>=4.7.1",
    "vedo>=2025.5.4",
]
